# djangocms-haystack

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/workflows/: qa.yml  release-please.yml  release.yml
djangocms_haystack/: apps.py  base.py  helpers.py  search_indexes.py  urls.py  views.py
djangocms_haystack/templates/djangocms_haystack/: pagination.html  search.html
djangocms_search/: apps.py  base.py  helpers.py  search_indexes.py  urls.py  utils.py  views.py
djangocms_search/templates/djangocms_search/: base.html  form.html  results.html  search.html
tests/: conftest.py  settings.py  test_helpers.py
