[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-search"
version = "1.0.0rc1"
requires-python = ">=3.9"
dependencies = [
	"nh3",
	"whoosh",
	"django-haystack"
]

# Linter settings
[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["Q", "I"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

# Formatter settings
[tool.ruff.format]
quote-style = "double"
